Closed Bug 157378 Opened 22 years ago Closed 22 years ago

Cleanup some build warnings...

Categories

(SeaMonkey :: Build Config, defect)

All
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: roland.mainz, Assigned: roland.mainz)

References

()

Details

Attachments

(1 file, 1 obsolete file)

RFE: Cleanup some gcc compiler warnings...
Status: NEW → ASSIGNED
Taking...
Assignee: seawood → Roland.Mainz
Status: ASSIGNED → NEW
Status: NEW → ASSIGNED
Attached patch Patch for 2002-07-12-08-trunk (obsolete) — Splinter Review
Patch to kill some common gcc 2.95.x and Sun Workshop build warnings...
cls:
The "extern C" (=PR_BEGIN_EXTERN_C/PR_END_EXTERN_C) is required to get rid of
the following warning:
-- snip --
"../../../../../../../../home/mozilla/src/2002-07-12-08-trunk/mozilla/gfx/src/gtk/nsFontMetricsGTK.cpp",
line 3186: Warning (Anachronism): Formal argument 4 of type extern "C"
int(*)(const void*,const void*,void*) in call to NS_QuickSort(void*, unsigned,
unsigned,  extern "C" int(*)(const void*,const void*,void*), void*) is being
passed int(*)(const void*,const void*,void*).
"../../../../../../../../home/mozilla/src/2002-07-12-08-trunk/mozilla/gfx/src/gtk/nsFontMetricsGTK.cpp",
line 4970: Warning (Anachronism): Formal argument 4 of type extern "C"
int(*)(const void*,const void*,void*) in call to NS_QuickSort(void*, unsigned,
unsigned,
 extern "C" int(*)(const void*,const void*,void*), void*) is being passed
int(*)(const void*,const void*,void*).
-- snip --
Requesting r=/sr= ...
Keywords: patch, review
Comment on attachment 91258 [details] [diff] [review]
Patch for 2002-07-12-08-trunk

The extern C stuff is correct according to 9.2.4 in stroustrup (I had to check;
I didn't know that before hand, although the explanation there does make sense)

r=bbaetz
Attachment #91258 - Flags: review+
*** Bug 157356 has been marked as a duplicate of this bug. ***
This is silly.  If you want to morph a bug, then just do it.  Don't file a new
bug just to dupe another bug into it.  Secondly, please use my patch on bug
157356 which includes changes to the #else and #endif blocks to enhance the
readability.  You use comments on pretty much every other #else and #endif and
it really makes it loads easier to read with the comments.
Christopher Aillon wrote:
> This is silly.  If you want to morph a bug, then just do it.  Don't file a new
> bug just to dupe another bug into it. 

Gnnnn... wonderfull... xx@@@!!!. One time I get the whips because I morph bugs
and the other time I get the whips because I don't morph them... oh well... ;-(

> Secondly, please use my patch on bug
> 157356 which includes changes to the #else and #endif blocks to enhance the
> readability.  You use comments on pretty much every other #else and #endif and
> it really makes it loads easier to read with the comments.

OK, new patch in a few mins...
Attachment #91258 - Attachment is obsolete: true
Comment on attachment 92099 [details] [diff] [review]
New patch for 2002-07-18-08-trunk

sr=bzbarsky
Attachment #92099 - Flags: superreview+
Comment on attachment 92099 [details] [diff] [review]
New patch for 2002-07-18-08-trunk

r=biesi
Attachment #92099 - Flags: review+
Comment on attachment 92099 [details] [diff] [review]
New patch for 2002-07-18-08-trunk

a=asa (on behalf of drivers) for checkin to 1.1
Attachment #92099 - Flags: approval+
Filed&&fixed http://xprint.mozdev.org/bugs/show_bug.cgi?id=2179 to apply the
XprintUtil changes to the xprint.mozdev.org CVS ...

... marking bug as FIXED.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: