Fix some build warnings.  Bug 157378, patch by Roland.Mainz@informatik.med.uni-giessen.de (Roland Mainz), r=bbaetz, biesi, sr=bzbarsky, a=asa